--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <script src="brainfuck.js"></script>
     </body>
 </html>
